--- a/config/.env.sample
+++ b/config/.env.sample
@@ -1,6 +1,7 @@
 SECRET_KEY = 
 ALGORITHM = "HS256"
-ACCESS_TOKEN_EXPIRE_MINUTES = 30
+ACCESS_TOKEN_EXPIRE_MINUTES = 30 # 30 minutes
+REFRESH_TOKEN_EXPIRE_MINUTES = 720 # 12 hours
 
 RABBIT_MQ_URL =
 RABBIT_MQ_PORT = 
